--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ ul li a{
 ul li a :hover{
     color: red;
 }
-nav-tab::after{
+nav-tab1::after{
     content:'';
     width: 100%;
     height:4px;
@@ -52,5 +52,23 @@ nav-tab::after{
 .About_us{
     display: flex;
     justify-content: space-around;
+}
+.image1{
+    width: 250x;
+}
+.text-box p{
+    color: gray;
+}
+.text-box{
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.text-box h1{
+    font-size: 50px;
+}
+  
 
 
