--- a/index.css
+++ b/index.css
@@ -103,7 +103,19 @@ nav-tab1::after{
     text-align: center;
   
   }
+  .Double_decker{
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+      width: 100%;
+  }
+  .Quality , .Delivery, .Delicious{
+    align-items: center;
+    flex-direction: row;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
 
-  
+  }
 
 
