--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *{
     text-decoration: none;
     color: #000;
+
 }
 header{ 
     background-image: linear-gradient(132deg, #ffffff 50%, #f6b400 0%);
@@ -181,6 +182,10 @@ nav-tab1::after{
     margin: 5%;
   
 }
+.cart1{
+    background-color:red;
+
+}
 
 .container4, .container5, .container6 {
     width: 20%;
@@ -194,6 +199,7 @@ nav-tab1::after{
     align-items: center;
     flex-direction: row-reverse;
     width: 100%;
+    
 }
 
 .To_download{
@@ -211,7 +217,7 @@ nav-tab1::after{
     
 
 }
-#apps{
+.apps{
     flex-direction: row;
     justify-content: space-between;
 }
@@ -237,7 +243,9 @@ nav-tab1::after{
 }
 
 .upper_right_footer{
-    position: relative; left: 140px;bottom: 25px;
+    position: relative; 
+    left: 140px;
+    bottom: 25px;
     padding:7% 8% ;
     margin-bottom: 38%;
     display: flex;
@@ -254,24 +262,21 @@ nav-tab1::after{
 .lower_footer_section{
     display: flex;
     justify-content: space-evenly;
-    position: absolute;
-    left: 150px;
-    width: 200px;
-    height: 120px;
-    align-items: center;
-    flex-direction: row;
 }
+
+.lower_footer_section ul li{
+    list-style-type: none;
+    text-align:center;
+    padding: 5px;
+     display:inline;
+   margin-left: 20%;
+}
+
 
 .lower_left_footer{
     font-size: 16x;
 }
 
-.lower_middle_footer ul li{
-    list-style-type: none;
-    text-align:center;
-    padding: 5px;
-     display:inline;
-}
 
 .lower_right_footer{
     font-size: 20px;
